PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.7
- Upgraded bundled SQLite to version 3.7.6.2. (Scott)
- Upgraded bundled PCRE to version 8.12. (Scott)
- Increased the backtrack limit from 100000 to 1000000 (Rasmus)

- Zend Engine:
  . Fixed bug #54804 (__halt_compiler and imported namespaces).
    (Pierrick, Felipe)
  . Fixed bug #54585 (track_errors causes segfault). (Dmitry)
  . Fixed bug #54423 (classes from dl()'ed extensions are not destroyed). 
    (Tony, Dmitry)
  . Fixed bug #54372 (Crash accessing global object itself returned from its
    __get() handle). (Dmitry)
  . Fixed bug #54358 (Closure, use and reference). (Dmitry)
  . Fixed bug #54367 (Use of closure causes problem in ArrayAccess). (Dmitry)
  . Fixed bug #54039 (use() of static variables in lambda functions can break
     staticness). (Dmitry)
  . Fixed bug #54262 (Crash when assigning value to a dimension in a non-array).
    (Dmitry)

- Core:
  . Implemented FR #54459 (Range function accuracy). (Adam)
  . Added PHP_MANDIR constant telling where the manpages were installed into,
    and an --man-dir argument to php-config. (Hannes)

  . Fixed a crash inside dtor for error handling. (Ilia)

  . Fixed bug #54935 php_win_err can lead to crash. (Pierre)
  . Fixed bug #54924 (assert.* is not being reset upon request shutdown). (Ilia)
  . Fixed bug #54895 (Fix compiling with older gcc version without need for
    membar_producer macro). (mhei at heimpold dot de)
  . Fixed bug #54723 (getimagesize() doesn't check the full ico signature).
    (Scott)
  . Fixed bug #54580 (get_browser() segmentation fault when browscap ini
    directive is set through php_admin_value). (Gustavo)
  . Fixed bug #54238 (use-after-free in substr_replace()). (Stas)
    (CVE-2011-1148)
  . Fixed bug #54180 (parse_url() incorrectly parses path when ? in fragment).